--- a/CSSGeneral.css
+++ b/CSSGeneral.css
@@ -5,9 +5,20 @@ PORTAIL
 -----------------------------------------------
 */
 
-.dégradé1{
+.degrade1{
     background-image: linear-gradient(to right, whitesmoke, lightgrey);
 }
+
+.corps0 {
+    position:absolute;
+    height:80%;
+    width:70%;
+    top:0;
+    left:15%;
+    right:15%;
+    bottom:20%;
+}
+
 .slogan{
     text-align: center;
     color: rgb(43, 1, 139);
@@ -23,11 +34,12 @@ PORTAIL
 #portail {
     text-align: center;
 }
-#entrée{
+#entree {
     text-decoration:none ;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
     color: red;
     font-size: 30px;
+
 }
 .pieddepage{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
@@ -35,7 +47,8 @@ PORTAIL
     background-color: white;
     color: grey;
     position:absolute;
-    top:5 px;
+    height:20%;
+    top:80%;
     bottom:0;
     right:0;
     left:0;
@@ -56,10 +69,10 @@ PAGE DE PRESENTATION
 -----------------------------------------------
 */
 
-.entête {
+.entete {
     background-image: radial-gradient(at 20% 100%, rgb(255, 255, 255),rgb(189, 187, 187));
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
-    color: white;
+    color: rgb(255, 255, 255);
     position:absolute;
     top:0;
     right:0;
@@ -67,19 +80,335 @@ PAGE DE PRESENTATION
     height: 20%;
 }
 
-.imageentête{
+.imageentete{
     float: left;
-    position: relative;
+    position: absolute;
     margin-left: 0%;
     margin-right: 80%;
     width: 20%;
     height: 90%;
 }
 
-.titreentête{
-    font-size: 30px;
-    position:relative;
+.titreentete{
+    text-align: justify;
+    margin-bottom: 7px;
+    font-size: 27.5px;
+    position:absolute;
     right: 0%;
     left:50%;
     bottom:0%;
+}
+
+#menu{
+    background-image: radial-gradient(at 20% 50%,rgb(255, 255, 255), rgb(238, 238, 238));
+    position: absolute;
+    top:20%;
+    bottom:70%;
+    right:20%;
+    left:20%;
+    width:60%;
+    height:10%;
+}
+
+#quart1{
+    position: absolute;
+    top: 0;
+    bottom:0;
+    right:75%;
+    left:0%;
+    width:25%;
+    height:100%;
+    text-align: center;
+    
+}
+
+#quart1:hover{
+    background-color: #e60080;
+}
+
+#lien1{
+    position: absolute;
+    top: 30%;
+    bottom:0;
+    right:0;
+    left:0;
+    width:100%;
+    height:70%;
+    text-decoration:none ;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
+    color: #e60080;
+    font-size: 25px;
+}
+
+#lien1:hover{
+    color:aliceblue;
+}
+
+#quart2{
+    position: absolute;
+    top: 0;
+    bottom:0;
+    right:50%;
+    left:25%;
+    width:25%;
+    height:100%;
+    text-align: center;
+}
+
+#quart2:hover{
+    background-color:#14a537;
+}
+
+#lien2{
+    position: absolute;
+    top: 30%;
+    bottom:0;
+    right:0;
+    left:0;
+    width:100%;
+    height:100%;
+    text-decoration:none ;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
+    color: #14a537;
+    font-size: 25px;
+}
+
+#lien2:hover{
+    color:aliceblue;
+}
+
+#quart3{
+    position: absolute;
+    top: 0;
+    bottom:0;
+    right:25%;
+    left:50%;
+    width:25%;
+    height:100%;
+}
+
+#quart3:hover{
+    background-color:#1096d5;
+}
+
+#lien3{
+    position: absolute;
+    top: 30%;
+    bottom:0;
+    right:0;
+    left:0;
+    width:100%;
+    height:100%;
+    text-align: center;
+    text-decoration:none ;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
+    color: #1096d5;
+    font-size: 25px;
+}
+
+#lien3:hover{
+    color:aliceblue;
+}
+
+#quart4{
+    position: absolute;
+    top: 0;
+    bottom:0;
+    right:0%;
+    left:75%;
+    width:25%;
+    height:100%;
+    text-align: center;
+}
+
+#quart4:hover{
+    background-color:grey;
+}
+
+#lien4{
+    position: absolute;
+    top: 30%;
+    bottom:0;
+    right:0;
+    left:0;
+    width:100%;
+    height:100%;
+    text-decoration:none ;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
+    color: grey;
+    font-size: 25px;
+}
+
+#lien4:hover{
+    color:aliceblue;
+}
+
+#corps1{
+    line-height: 12pt;
+    position:absolute;
+    top:30%;
+    bottom:0;
+    width:100%;
+    height:70%;
+}
+
+.pasdemargebottom{
+    margin-bottom: 0px;
+}
+
+.pasdemargetop{
+    margin-top: 6px;
+}
+
+#texte1{
+    color:grey;
+    font-size: 10pt;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
+    position: absolute;
+    width:100%;
+    height: 50%;
+    top:0;
+}
+
+#tiers1{
+    position: absolute;
+    width: 33%;
+    left:0;
+    right:66%;
+    top:0;
+    bottom:0;
+}
+
+#tiers2{
+    position: absolute;
+    width: 33%;
+    left:33%;
+    right:33%;
+    top:0;
+    bottom:0;
+}
+
+#tiers3{
+    position: absolute;
+    width: 33%;
+    left:66%;
+    right:0%;
+    top:0;
+    bottom:0;
+}
+
+#etapes{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
+    position: absolute;
+    width:50%;
+    right: 25%;
+    left:25%;
+    height: 35%;
+    bottom:10%;
+    top:55%;
+}
+
+#etape1{
+    border :solid #e60080 3px;
+    position: absolute;
+    width: 25%;
+    left:0;
+    right:66%;
+    top:0;
+    bottom:0;
+}
+
+#moitie1{
+    text-align: center;
+    color:white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
+    background-image: radial-gradient(at 0% 0%,white ,#e60080 60%);
+    position: absolute;
+    height: 50%;
+    width: 100%;
+    top:0;
+    bottom:50%;
+}
+
+#moitie2{
+    font-size: 9pt;
+    text-align: justify;
+    color:grey;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;    
+    background-image: radial-gradient(at 0% 0%,white ,#f8d0e8);
+    position: absolute;
+    width: 100%;
+    height: 50%;
+    bottom:0;
+    top:50%;
+}
+
+#etape2{
+    border:solid #bad204 3px;
+    position: absolute;
+    width: 25%;
+    left:33%;
+    right:33%;
+    top:0;
+    bottom:0;
+}
+
+#moitie3{
+    text-align: center;
+    color:white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;   
+    background-image: radial-gradient(at 0% 0%,#bad204,#14a537 60%);
+    position: absolute;
+    height: 50%;
+    width: 100%;
+    top:0;
+    bottom:50%;
+}
+
+#moitie4{
+    font-size: 9pt;
+    text-align: justify;
+    color:grey;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;    
+    background-image: radial-gradient(at 0% 0%,white ,#e0f17c);
+    position: absolute;
+    height: 50%;
+    width: 100%;
+    bottom:0;
+    top:50%;
+}
+
+#etape3{
+    border:solid #1096d5 2px;
+    position: absolute;
+    width: 25%;
+    left:66%;
+    right:0%;
+    top:0;
+    bottom:0;
+}
+
+#moitie5{
+    text-align: center;
+    color:white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;    
+    background-image: radial-gradient(at 0% 0%,white,#1096d5 60%);
+    position: absolute;
+    height: 50%;
+    width: 100%;
+    top:0;
+    bottom:50%;
+}
+
+#moitie6{
+    font-size: 9pt;
+    text-align: justify;
+    color:grey;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;   
+    background-image: radial-gradient(at 0% 0%,white,#91d5f5);
+    position: absolute;
+    height: 50%;
+    width: 100%;
+    bottom:0;
+    top:50%;
 }
