--- a/Jeune.css
+++ b/Jeune.css
@@ -1,3 +1,43 @@
+/*
+CSS DE LA PAGE JEUNE DU MODULE VISITEUR
+*/
+
+/*
+Remarques générales :
+
+- Les éléments sont ordonnés (grossièrement) dans leur ordre d'apparition dans la page HTML.
+- Les noms des IDs ont été choisis pour être les plus explicites possibles, quand ce n'est pas le cas est précisé
+ce à quoi ils correspondent.
+- Il a été choisi d'utiliser les IDs plutôt que les classes pour réduire les dépendances entre les styles des 
+éléments.
+- Les positionnements sont presque tous en absolus. Cela a permis d'arranger très précisément le design de la page
+pour se conformer mieux à ce qui est proposé par le client. On a vu qu'il n'était pas d'usage de faire ça de nos jours
+mais c'est ce qui a le mieux fonctionné et permis d'avancer rapidement.
+- Pour que les pages puissent s'adapter un petit peu aux utilisateurs, les unités vh, vw, etc. ont été utilisées
+pour que le site convienne à tout type "classique" de fenêtre. Le site est cependant mieux optimisé pour les formats 
+paysages. Il n'est pas esthétique mais est utilisable en format portrait.
+- La police utilisée par le client dans les documents n'est pas celle que nous utilisons car nous ne l'avons pas 
+trouvée, mais on a choisi une police qui puisse conserver l'esthétique demandée.
+- Au départ, il était prévu d'utiliser un fichier CSS global pour tout le site -- pour réduire la quantité de fichiers -- 
+mais on s'est aperçu assez vite que les IDs étaient plus clairs et que les recherches dans les fichiers étaient plus 
+simples en associant à chaque HTML son CSS, quitte à devoir copier-coller des styles comme celui de l'entête dans 
+chaque fichier.
+- Comme beaucoup du CSS a été trouvé à force d'essai-erreur et que les styles sont très similaires les uns avec
+les autres, il y a peu de commentaires.
+*/
+
+/*
+- La fonction radial-gradient est utilisée pour les fonds en dégradé. Le premier paramètre correspond au centre du 
+cercle qui est de la première couleur indiquée et qui se fond en la deuxième couleur.
+- La fonction linear-gradient est utilisée pour les fonds en dégradé. Le premier paramètre correspond au sens du
+dégradé qui est de la première couleur indiquée et qui se fond en la deuxième couleur.
+- Pour le fond des pages web, un z-index de -1 permet de faire passer tout autre élément au premier plan devant le fond.
+L'opacité permet de rendre les couleurs de l'image moins aggressives.
+- La sous-classe hover est utilisée quand il faut qu'un élément change de style au passage de la souris.
+*/
+
+
+
 html{
     height:100%;
     width: 100%;
@@ -21,7 +61,7 @@ body{
     margin-bottom: 0;
 }
 
-/* */
+/*Une div qui correspond à l'entête des pages du site*/
 #entete {
     background-image: radial-gradient(at 20% 100%, rgb(255, 255, 255),rgb(189, 187, 187));
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
@@ -33,7 +73,6 @@ body{
     height: 20%;
 }
 
-/* */
 #imageentete{
     float: left;
     position: absolute;
@@ -43,7 +82,7 @@ body{
     height: 90%;
 }
 
-/* */
+/*Le grand titre de l'entête*/
 #titreentete1{
     color: #e60080;
     font-size: 6.5vw;
@@ -60,6 +99,7 @@ body{
     margin-bottom: 0;
 }
 
+/*La phrase d'accroche de l'entête.*/
 #titreentete2{
     text-align: right;
     margin-bottom: 1vmin;
@@ -71,7 +111,7 @@ body{
     margin-right: 2vmin;
 }
 
-/* */
+/*Le menu est une bande divisée en 4 parties égales (les "quarts" ci-dessous) qui contiennent chacune un lien.*/
 #menu{
     background-image: radial-gradient(at 20% 50%,rgb(255, 255, 255), rgb(238, 238, 238));
     position: absolute;
@@ -82,6 +122,138 @@ body{
     width:60%;
     height:10%;
 }
+
+
+#quart1{
+    position: absolute;
+    top: 0;
+    bottom:0;
+    right:75%;
+    left:0%;
+    width:25%;
+    height:100%;
+    text-align: center;
+    background-color: #e60080;
+    
+}
+
+#lien1{
+    position: absolute;
+    padding-top: 3.5vh;
+    top: 0%;
+    bottom:0;
+    right:0;
+    left:0;
+    width:100%;
+    height:100%;
+    text-decoration:none ;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
+    color: aliceblue;
+    font-size: 2.2vw;
+}
+
+#quart2{
+    position: absolute;
+    top: 0;
+    bottom:0;
+    right:50%;
+    left:25%;
+    width:25%;
+    height:100%;
+    text-align: center;
+}
+
+#quart2:hover{
+    background-color:#14a537;
+}
+
+#lien2{
+    padding-top: 3.5vh;
+    position: absolute;
+    top: 0;
+    bottom:0;
+    right:0;
+    left:0;
+    width:100%;
+    height:100%;
+    text-decoration:none ;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
+    color: #14a537;
+    font-size: 2.2vw;
+}
+
+#lien2:hover{
+    color:aliceblue;
+}
+
+#quart3{
+    position: absolute;
+    top: 0;
+    bottom:0;
+    right:25%;
+    left:50%;
+    width:25%;
+    height:100%;
+}
+
+#quart3:hover{
+    background-color:#1096d5;
+}
+
+#lien3{
+    padding-top: 3.5vh;
+    position: absolute;
+    top: 0;
+    bottom:0;
+    right:0;
+    left:0;
+    width:100%;
+    height:100%;
+    text-align: center;
+    text-decoration:none ;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
+    color: #1096d5;
+    font-size: 2.2vw;
+}
+
+#lien3:hover{
+    color:aliceblue;
+}
+
+#quart4{
+    position: absolute;
+    top: 0;
+    bottom:0;
+    right:0%;
+    left:75%;
+    width:25%;
+    height:100%;
+    text-align: center;
+}
+
+#quart4:hover{
+    background-color:grey;
+}
+
+#lien4{
+    padding-top: 3.5vh;
+    position: absolute;
+    top: 0;
+    bottom:0;
+    right:0;
+    left:0;
+    width:100%;
+    height:100%;
+    text-decoration:none ;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
+    color: grey;
+    font-size: 2.2vw;
+}
+
+#lien4:hover{
+    color:aliceblue;
+}
+
 
 #corps{
     position: absolute;
@@ -120,172 +292,14 @@ body{
     right: 15%;
 }
 
-/* */
-#quart1{
-    position: absolute;
-    top: 0;
-    bottom:0;
-    right:75%;
-    left:0%;
-    width:25%;
-    height:100%;
-    text-align: center;
-    
-}
-
-/* */
-#quart1{
-    position: absolute;
-    top: 0;
-    bottom:0;
-    right:75%;
-    left:0%;
-    width:25%;
-    height:100%;
-    text-align: center;
-    background-color: #e60080;
-    
-}
-
-/* */
-#lien1{
-    position: absolute;
-    padding-top: 3.5vh;
-    top: 0%;
-    bottom:0;
-    right:0;
-    left:0;
-    width:100%;
-    height:100%;
-    text-decoration:none ;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
-    color: aliceblue;
-    font-size: 2.2vw;
-}
-
-/* */
-#quart2{
-    position: absolute;
-    top: 0;
-    bottom:0;
-    right:50%;
-    left:25%;
-    width:25%;
-    height:100%;
-    text-align: center;
-}
-
-/* */
-#quart2:hover{
-    background-color:#14a537;
-}
-
-/* */
-#lien2{
-    padding-top: 3.5vh;
-    position: absolute;
-    top: 0;
-    bottom:0;
-    right:0;
-    left:0;
-    width:100%;
-    height:100%;
-    text-decoration:none ;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
-    color: #14a537;
-    font-size: 2.2vw;
-}
-
-/* */
-#lien2:hover{
-    color:aliceblue;
-}
-
-
-/* */
-#quart3{
-    position: absolute;
-    top: 0;
-    bottom:0;
-    right:25%;
-    left:50%;
-    width:25%;
-    height:100%;
-}
-
-/* */
-#quart3:hover{
-    background-color:#1096d5;
-}
-
-/* */
-#lien3{
-    padding-top: 3.5vh;
-    position: absolute;
-    top: 0;
-    bottom:0;
-    right:0;
-    left:0;
-    width:100%;
-    height:100%;
-    text-align: center;
-    text-decoration:none ;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
-    color: #1096d5;
-    font-size: 2.2vw;
-}
-
-/* */
-#lien3:hover{
-    color:aliceblue;
-}
-
-/* */
-#quart4{
-    position: absolute;
-    top: 0;
-    bottom:0;
-    right:0%;
-    left:75%;
-    width:25%;
-    height:100%;
-    text-align: center;
-}
-
-/* */
-#quart4:hover{
-    background-color:grey;
-}
-
-/* */
-#lien4{
-    padding-top: 3.5vh;
-    position: absolute;
-    top: 0;
-    bottom:0;
-    right:0;
-    left:0;
-    width:100%;
-    height:100%;
-    text-decoration:none ;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
-    color: grey;
-    font-size: 2.2vw;
-}
-
-/* */
-#lien4:hover{
-    color:aliceblue;
-}
-
-/* */
+/*Phrase en couleur pour l'emphase*/
 #special{
     text-align: center;
     color:#e60080;
 }
 
 
-/* */
+/* Une div qui comprend deux parties pour les deux boutons d'inscription et de connexion.*/
 #boutons{
     position: absolute;
     height: 20%;
@@ -296,7 +310,6 @@ body{
     right: 30%;
 }
 
-/* */
 #moitie7{
     border: 3px solid grey;
     background-image: radial-gradient(at 0% 0%, rgb(255, 255, 255), rgb(212, 212, 212));
@@ -310,7 +323,6 @@ body{
     overflow: hidden;
 }
 
-/* */
 #moitie8{
     border: 3px solid grey;
     background-image: radial-gradient(at 0% 0%, rgb(255, 255, 255), rgb(207, 206, 206));
@@ -324,7 +336,6 @@ body{
     overflow: hidden;
 }
 
-/* */
 #lien9{
     padding-top: 3vh;
     position: absolute;
@@ -337,7 +348,6 @@ body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
 }
 
-/* */
 #lien10{
     padding-top: 3vh;
     position: absolute;
