--- a/Jeune/CompteJeune.css
+++ b/Jeune/CompteJeune.css
@@ -1,3 +1,337 @@
+/*
+CSS DE LA PAGE DE CONNEXION
+*/
+
+/*
+Remarques générales :
+
+- Les éléments sont ordonnés (grossièrement) dans leur ordre d'apparition dans la page HTML.
+- Les noms des IDs ont été choisis pour être les plus explicites possibles, quand ce n'est pas le cas est précisé
+ce à quoi ils correspondent.
+- Il a été choisi d'utiliser les IDs plutôt que les classes pour réduire les dépendances entre les styles des 
+éléments.
+- Les positionnements sont presque tous en absolus. Cela a permis d'arranger très précisément le design de la page
+pour se conformer mieux à ce qui est proposé par le client. On a vu qu'il n'était pas d'usage de faire ça de nos jours
+mais c'est ce qui a le mieux fonctionné et permis d'avancer rapidement.
+- Pour que les pages puissent s'adapter un petit peu aux utilisateurs, les unités vh, vw, etc. ont été utilisées
+pour que le site convienne à tout type "classique" de fenêtre. Le site est cependant mieux optimisé pour les formats 
+paysages. Il n'est pas esthétique mais est utilisable en format portrait.
+- La police utilisée par le client dans les documents n'est pas celle que nous utilisons car nous ne l'avons pas 
+trouvée, mais on a choisi une police qui puisse conserver l'esthétique demandée.
+- Au départ, il était prévu d'utiliser un fichier CSS global pour tout le site -- pour réduire la quantité de fichiers -- 
+mais on s'est aperçu assez vite que les IDs étaient plus clairs et que les recherches dans les fichiers étaient plus 
+simples en associant à chaque HTML son CSS, quitte à devoir copier-coller des styles comme celui de l'entête dans 
+chaque fichier.
+- Comme beaucoup du CSS a été trouvé à force d'essai-erreur et que les styles sont très similaires les uns avec
+les autres, il y a peu de commentaires.
+*/
+
+/*
+- La fonction radial-gradient est utilisée pour les fonds en dégradé. Le premier paramètre correspond au centre du 
+cercle qui est de la première couleur indiquée et qui se fond en la deuxième couleur.
+- La fonction linear-gradient est utilisée pour les fonds en dégradé. Le premier paramètre correspond au sens du
+dégradé qui est de la première couleur indiquée et qui se fond en la deuxième couleur.
+- Pour le fond des pages web, un z-index de -1 permet de faire passer tout autre élément au premier plan devant le fond.
+L'opacité permet de rendre les couleurs de l'image moins aggressives.
+- La sous-classe hover est utilisée quand il faut qu'un élément change de style au passage de la souris.
+*/
+
 html{
-	background-color:grey;
+    height:100%;
+    width: 100%;
 }
+
+
+body{
+    position: absolute;
+    width: 100%;
+    height:100%;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+}
+
+
+.nomargin{
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+}
+
+/*Une div qui correspond à l'entête des pages du site*/
+#entete {
+    background-image: radial-gradient(at 20% 100%, rgb(255, 255, 255),rgb(189, 187, 187));
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
+    color: rgb(255, 255, 255);
+    position:absolute;
+    top:0;
+    right:0;
+    left:0;
+    height: 20%;
+}
+
+#imageentete{
+    float: left;
+    position: absolute;
+    margin-left: 0%;
+    margin-right: 80%;
+    width: 20%;
+    height: 90%;
+}
+
+/*Le grand titre de l'entête*/
+#titreentete1{
+    color: #e60080;
+    font-size: 6.5vw;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
+    position:absolute;
+    width: 50%;
+    height:50%;
+    bottom:47%;
+    top:3%;
+    left:48%;
+    right:2%;
+    text-align: right;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+/*La phrase d'accroche de l'entête.*/
+#titreentete2{
+    text-align: right;
+    margin-bottom: 1vmin;
+    font-size: 2.6vw;
+    position:absolute;
+    right: 0%;
+    left:40%;
+    bottom:0%;
+    margin-right: 2vmin;
+}
+
+
+#corps{
+    position: absolute;
+    width:100%;
+    height:60%;
+    top:20%;
+    bottom:20%;
+    left:0;
+    right:0;
+    color:rgb(87, 87, 87);
+    font-size: 1.5vw;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
+}
+
+#troisoptions{
+	position: absolute;
+	height: 70%;
+	width: 40%;
+	top:15%;
+	bottom:15%;
+	right:5%;
+	left:55%;
+}
+
+#infosperso{
+	text-align: center;
+	border: 2px solid #e60080;
+	background-image: linear-gradient(to bottom, white,rgb(238, 238, 238));
+	position: absolute;
+	height: 80%;
+	width: 50%;
+	top:10%;
+	bottom:10%;
+	right:48%;
+	left:2%;
+}
+
+#txt1{
+	text-decoration: underline;
+	color:#e60080;
+	font-size: 2vw;
+}
+
+#txt2{
+	position:absolute;
+	bottom:0;
+	left:23%;
+}
+
+#lien2{
+	text-decoration: none;
+    color: #e60080;
+}
+
+
+#creationref{
+	position: absolute;
+	height: 30%;
+	width: 100%;
+	top:0;
+	bottom:70%;
+	right:0;
+	left:0;
+}
+
+#envoirefs{
+	position: absolute;
+	height: 30%;
+	width: 100%;
+	top:35%;
+	bottom:35%;
+	right:0;
+	left:0;
+}
+
+#inclusionCV{
+	position: absolute;
+	height: 30%;
+	width: 100%;
+	top:70%;
+	bottom:0;
+	right:0;
+	left:0;
+}
+
+#invisible{
+	position: relative;
+	height: 80%;
+	width: 100%;
+	top:0;
+	bottom:20%;
+	right:0;
+	left:0;
+	z-index: -2;
+}
+
+
+
+
+#fond{
+    z-index: -1;
+    opacity: 60%;
+    position: absolute;
+    width: 70%;
+    height: 80%;
+    top: 10%;
+    bottom: 10%;
+    right: 15%;
+    left: 15%;
+}
+
+
+.bouton{
+    font-size: 1.8vw;
+    border: 2px solid #e60080;
+    background-color: rgb(245, 245, 245);
+    color:#e60080;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
+}
+
+.bouton:hover{
+    border: 2px solid #e60080;
+    background-color: rgb(196, 196, 196);
+    color:#e60080;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
+}
+
+.lien{
+    padding-top: 3vh;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    text-decoration: none;
+    color: #e60080;
+    font-size: 2vw;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
+}
+
+
+#listerefs{
+	background-image: linear-gradient(to right,white,rgb(224, 224, 224));
+	border: #e60080 solid 2px;
+	position: relative;
+	left:15%;
+	right:15%;
+	width:70%;
+	color: rgb(78, 78, 78);
+    font-size: 1.5vw;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
+}
+
+#vosdemandes{
+	text-align: center;
+	width:100%;
+	color:#e60080;
+	text-decoration: underline;
+}
+
+.demande{
+	border:#e60080 solid 1px;
+	border-left: 0px;
+	position:relative;
+	width:100%;
+	left:0;
+	right:0;
+	height:12vh;
+}
+
+.referent{
+	text-align: center;
+	position:absolute;
+	width:40%;
+	height:100%;
+	left:0;
+	right:60%;
+	top:0;
+	bottom:0;
+}
+
+.statut{
+	position:absolute;
+	width:20%;
+	height:100%;
+	left:40%;
+	right:40%;
+	top:0;
+	bottom:0;
+}
+
+.iddemande{
+	position:absolute;
+	width:25%;
+	height:100%;
+	left:60%;
+	right:15%;
+	top:0;
+	bottom:0;
+}
+
+.details{
+	position:absolute;
+	width:15%;
+	height:50%;
+	left:85%;
+	right:0;
+	top:25%;
+	bottom:25%;
+	text-decoration: none;
+	color: #e60080;
+}
+
+.statut0{
+	color:green;
+}
+
+.statut1{
+	color:orangered;
+}
+
+#message{
+	text-align: center;
+}
+
+
