--- a/Visiteur/Presentation.css
+++ b/Visiteur/Presentation.css
@@ -88,8 +88,9 @@ body{
     margin-bottom: 1vmin;
     font-size: 2.6vw;
     position:absolute;
-    right: 0%;
-    left:50%;
+    width:70%;
+    right: 1%;
+    left:29%;
     bottom:0%;
     margin-right: 2vmin;
 }
@@ -275,7 +276,7 @@ body{
 }
 
 #corps{
-    line-height: 2vh;
+    line-height: 2.3vh;
     position:absolute;
     top:30%;
     bottom:0;
@@ -365,7 +366,7 @@ Tout cela représente les boîtes qu'on peut voir sur la page.*/
 
 
 #moitie2{
-    font-size: 1.2vw;
+    font-size: 1vw;
     text-align: center;
     color:grey;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;    
@@ -404,7 +405,7 @@ Tout cela représente les boîtes qu'on peut voir sur la page.*/
 
 
 #moitie4{
-    font-size: 1.1vw;
+    font-size: 1vw;
     text-align: center;
     color:grey;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;    
@@ -443,7 +444,7 @@ Tout cela représente les boîtes qu'on peut voir sur la page.*/
 
 
 #moitie6{
-    font-size: 1.2vw;
+    font-size: 1vw;
     text-align: center;
     color:grey;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;   
