--- a/Jeune/Connexion.css
+++ b/Jeune/Connexion.css
@@ -109,14 +109,16 @@ body{
     bottom:0%;
     margin-right: 2vmin;
 }
-
+#invisible{
+    z-index:-2;
+    position:relative;
+    height:20%;
+    top:0;
+}
 
 #corps{
-    position: absolute;
+    position: relative;
     width:100%;
-    height:80%;
-    top:20%;
-    bottom:0;
     left:0;
     right:0;
     color:rgb(87, 87, 87);
@@ -128,11 +130,8 @@ body{
 #login{
     color:#e60080;
     text-align: center;
-    position: absolute;
+    position: relative;
     width:50%;
-    height:50%;
-    top:20%;
-    bottom:30%;
     left:25%;
     right:25%;
 }
@@ -174,11 +173,8 @@ label{
     color:red;
     font-size: 1.8vw;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
-    position: absolute;
-    height: 10%;
-    bottom:20%;
+    position: relative;
     width: 50%;
-    top:70%;
     left:25%;
     right:25%;
 }
