--- a/Jeune/DemandeDeReference.css
+++ b/Jeune/DemandeDeReference.css
@@ -93,7 +93,7 @@ body{
     top:3%;
     left:28%;
     right:2%;
-    text-align: center;
+    text-align: right;
     margin-top: 0;
     margin-bottom: 0;
 }
